# scenecopilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  runtime.py  runtime_profiles.py  seed.py  storage.py
backend/app/agent/: __init__.py  core.py  events.py  prompts.py
backend/app/domain/: __init__.py  runtime_models.py
backend/app/evals/: __init__.py  harness.py
backend/app/ingest/: __init__.py  pipeline.py  watcher.py
backend/app/observability/: __init__.py  metrics.py
backend/app/orchestration/: __init__.py  planner.py  policies.py
backend/app/providers/: __init__.py  anthropic.py  base.py  local.py  openai_audio.py  registry.py
backend/app/routes/: __init__.py  actions.py  audio.py  chat.py  client.py  dashboard.py  devices.py  documents.py  events.py  frame_stash.py  runs.py  scans.py  security.py  state.py  system.py
backend/app/services/: __init__.py  approval_service.py  approval_step_service.py  artifact_service.py  audit_service.py  auth_service.py  choice_execution_service.py  choice_manager_service.py  client_incident_service.py  continuation_service.py  decision_service.py  embedding_service.py  frame_stash_service.py  grounding_service.py  (+13 more)
backend/tests/: conftest.py  test_actions_route.py  test_approval_resume.py  test_approval_step_service.py  test_auth_service.py  test_choice_execution_service.py  test_continuation_service.py  test_scene_memory_service.py  test_temporal_scene_service.py
(+47 files in other folders)
