[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenecopilot-backend"
version = "0.1.0"
description = "FastAPI backend for SceneCopilot"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.37.1",
  "faster-whisper>=1.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "Pillow>=10.4.0",
  "pydantic>=2.8.2",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "watchdog>=4.0.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
